# ferric

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/ferric-app/: Cargo.toml
crates/ferric-app/src/: main.rs
crates/ferric-core/: Cargo.toml
crates/ferric-core/src/: crypto.rs  diff.rs  gm.rs  idgen.rs  json.rs  lib.rs  plugin.rs  regex.rs  rsa.rs  sql.rs  timestamp.rs  yaml.rs
crates/ferric-ui/: Cargo.toml  build.rs
crates/ferric-ui/src/: app.rs  chrome.rs  fonts.rs  icons.rs  lib.rs  plugin_host.rs  theme.rs  tool.rs
crates/ferric-ui/src/views/: crypto.rs  diff.rs  gm.rs  json.rs  mod.rs  regex.rs  rsa.rs  sql.rs  timestamp.rs  uuid.rs  yaml.rs
crates/ferric-ui/src/widgets/: code_editor.rs  mod.rs
plugins/url-codec/: Cargo.toml
plugins/url-codec/src/: lib.rs
