[workspace]
resolver = "2"
members = ["crates/ferric-core", "crates/ferric-ui", "crates/ferric-app"]
# plugins/ 下是独立编译到 wasm32 的插件示例，不属于主工作区
exclude = ["plugins"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Ferric"]

[workspace.dependencies]
# Internal
ferric-core = { path = "crates/ferric-core" }
ferric-ui = { path = "crates/ferric-ui" }

# GUI
eframe = { version = "0.29", default-features = false, features = ["wgpu", "persistence", "wayland", "x11"] }
egui = "0.29"

# Serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Tools
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "v5", "v6", "v7"] }
similar = { version = "2", features = ["inline"] }
rfd = "0.14"
serde_yaml = "0.9"
sqlformat = "0.2"
fancy-regex = "0.13"
rsa = "0.9"
rand = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
des = "0.8"
sm4 = "0.5"
cipher = "0.4"
ctr = "0.9"
cfb-mode = "0.8"
ofb = "0.6"
md-5 = "0.10"
base64 = "0.22"
smcrypto = "0.3"

# Platform
directories = "5"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
