[package]
name = "ferric-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ferric-core = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono-tz = { workspace = true }
rfd = { workspace = true }
